# 001_chatbot

./: .gitignore  PRJ01_W1_002_OpenAI_Chat_Completion.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  PRJ01_W2_001_Tokenizing_Embedding.ipynb  PRJ01_W2_002_Simple_RAG_Pipeline.ipynb  PRJ01_W2_005_Embedding_Model.ipynb  PRJ01_W2_006_Vectorstore.ipynb  PRJ01_W2_007_Retriever.ipynb  PRJ01_W3_001_Prompt_Engineering_Basic.ipynb  README.md  TravelPlanner_20260207_강은영.ipynb  main.py  pyproject.toml
001_chatbot/: PRJ01_W2_003_Document_Loader.ipynb  PRJ01_W3_005_Chat_History.ipynb
002_etfbot/: PRJ02_W1_001_RAG_Evaluation_Intro.ipynb  PRJ02_W1_003_Retrieval_Keyword_Hybrid.ipynb  PRJ02_W1_004_Retrieval_Query_Expansion.ipynb  PRJ02_W1_006_Contextual_Retrieval.ipynb
002_etfbot/data/: evaluation_dataset_key.csv  evaluation_result_key.csv  ragas_testset_en_key.csv  ragas_testset_key.csv
002_etfbot/homework/: ContextualRetrieval_20260307_강은영.ipynb  kts_chat_history.db
002_etfbot/homework/kts_vector_db/chroma/openai/contextual/: chroma.sqlite3
002_etfbot/homework/kts_vector_db/chroma/openai/normal/: chroma.sqlite3
docs/: HousingFaqChatbot_20260228_강은영_system.html  llm_cache_cleanup.md
homework/: HousingFaqChatbot_20260228_강은영.ipynb  NaiveRag_20260221_강은영.ipynb
