[project]
name = "001-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # === Core Dependencies ===
    "beautifulsoup4>=4.14.3",
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",  
    "notebook>=7.0.0", 
    "kiwipiepy>=0.22.2",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    
    # === ML Stack (Intel Mac 제약) ===
    "torch==2.2.2",
    "sentence-transformers==2.2.2",
    "transformers>=4.30,<4.40",
    "onnxruntime<1.17",
    
    # === 버전 고정 (충돌 방지) ===
    "huggingface-hub==0.19.4",  # ⭐ 정확한 버전 고정
    "pillow>=8.0,<11.0",
    
    # === UI Framework ===
    "gradio>=4.0,<5.0",
    "gradio-pdf>=0.0.20,<0.0.24",
    
    # === LangChain ===
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-google-genai>=2.0,<3.0",  # ⭐ 4.2.0 → 2.x
]